# arf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_SIGNING_KEY.asc  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.js  readme-me.md.md  vite.config.js  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-docs.yml  release.yml  test.yml
docs/: README.md  data.html  design.html  gallery.html  index.html  library.html  linking.html  machine.html  readme-me.md.md  writing.html
docs/assets/: arf-docs.css  theme.js
src/: App.svelte  app.css  appshell.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: Editor.svelte  GraphView.svelte  Library.svelte  Reader.svelte  cite.js  embedder.worker.js  epub.js  folders.js  graphindex.js  highlight.js  i18n.svelte.js  markdown.js  ml.js  motion.svelte.js  openaccess.js  pdffit.js  references.js  sync.js  vault.js  vaultadapter.js  workspace.js
tests/e2e/: organize.spec.js  smoke.spec.js
tests/unit/: cite.test.js  epub.test.js  folders.test.js  graphindex.test.js  highlight.test.js  markdown.test.js  openaccess.test.js  pdffit.test.js  references.test.js  sync.test.js  vault.test.js  vaultadapter.test.js  workspace.test.js
