[package]
name = "arf"
version = "1.3.1"
description = "Arf — a second brain for scientists"
authors = ["Tuna Birgün"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-persisted-scope = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
