[package]
name = "arf"
version = "1.9.0"
description = "Arf — a second brain for scientists"
authors = ["Tuna Birgün"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
# unsafe-headers: lets the frontend set a browser User-Agent and drop the auto-added Origin
# header (Origin: http://tauri.localhost makes many OA hosts answer 403) when fetching PDFs
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-persisted-scope = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
